--- a/app/globals.css
+++ b/app/globals.css
@@ -1,107 +1,149 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
-  box-sizing: border-box;
+body {
+  width: 100%;
   padding: 0;
   margin: 0;
+  height: 100%;
+  background-color:#222222;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+html {
+  height: 100%;
+  width: 100%;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.wrapper {
+  height: 100%;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.topper {
+  width:100%;
+  color: whitesmoke;
+  background-color: #494949;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.siteLogo {
+  margin-left: 10px;
+}
+
+.myMoney {
+  margin-right: 10px;
+}
+
+.maintab {
+  background-color:#222222;
+  height: 100%;
+}
+
+.chart-and-bet {
+  width: 100%;
+  height: 30%;
+  display:flex;
+  border-radius: 10px;
+  background-color: #2d2d2d;
+  margin: 5px;
+}
+
+.multiplyer {
+  color: greenyellow;
+  font-size: 50px;
+  width: 60%;
+  height: 100%;
+}
+
+.counter {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+
+.counter-fail {
+  display: inline-block;
+  color: rgb(192, 0, 0);
+}
+
+.bet {
+  width: 40%;
+  margin-top: 10px;
+  color: gray;
+  font-weight: bold;
+  display: flex;
+  flex-direction: column;
+}
+
+.button-div {
+  margin: 10px;
+  margin-left: 0;
+  height: 100%;
+}
+
+.bet-button-on {
+  width: 100%;
+  height: 100%;
+  /* border: 0; */
+  border-radius: 10px;
+  background-color: rgb(255, 178, 34);
+  font-size: 40px;
+}
+
+.bet-button-off {
+  width: 100%;
+  height: 100%;
+  /* border: 0; */
+  border-radius: 10px;
+  background-color: rgb(120, 120, 120);
+  font-size: 40px;
+}
+
+.neonText {
+  color: #fff;
+  text-shadow:
+    0 0 7px #fff,
+    0 0 10px #fff,
+    0 0 21px #fff,
+    0 0 42px #0fa,
+    0 0 82px #0fa,
+    0 0 92px #0fa
+}
+
+.blueNeonText {
+  color:#fff;
+  text-shadow:
+    0 0 7px #fff,
+    0 0 10px #fff,
+    0 0 21px #fff,
+    0 0 42px aqua,
+    0 0 82px aqua,
+    0 0 92px aqua
+}
+
+.redNeonText {
+  text-shadow:
+    0 0 7px #fff,
+    0 0 10px #fff,
+    0 0 21px #fff,
+    0 0 42px rgb(255, 0, 0),
+    0 0 82px rgb(255, 0, 0),
+    0 0 92px rgb(255, 0, 0)
+}
+
+.time-and-bet {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: #494949;
+  margin: 10px;
+  border-radius: 10px;
+}
+
+.timeleft {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
 }
